tests/errors/surf_parse_09.ki
# PARSER: an unmatched '[' - the list bracket is never closed
var xs = [1, 2, 3